--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "bin": {
-    "login-lecture": "app/bin/www.js"
+    "login-lecture": "bin/www.js"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -79,7 +79,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "start": "nodemon ./LOGIN-LECTURE/app/bin/www.js",
+    "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
